# pdf2word_ocr

./: .gitignore  Dockerfile  Readme.md  app.py  docker-entrypoint.sh  index.html  pdf2word  pyproject.toml  requirements.txt
