[tool.poetry]
name = "pdf2word"
version = "0.1.0"
description = "Converts PDF into word using tesseract as OCR"
authors = ["automationleg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
python-docx = "^0.8.11"
click = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
